--- a/Sophos_Central_Turn_On_Tamper.config
+++ b/Sophos_Central_Turn_On_Tamper.config
@@ -1,4 +1,6 @@
 [DEFAULT]
+# Do not leave the ClientSecret in the config file
+# The API keys will need to be Service Principal Management
 ClientID:<put clientID here>
 ClientSecret:<put clientSecret here or leave blank to enter manually>
 
